@@ -1,4 +1,4 @@
-DIST startupmanager-1.9.10.tar.gz 79620 RMD160 e8e424b9d0ac2785bb32ee5694e483d1ae62fd37 SHA1 be23a6d566e602903bee630ddb4057d15397ed7c SHA256 bd427ae5f3266eeb3fe4538476529d1746ea90c46865fce9ad72d821dee38590
-EBUILD startupmanager-1.9.10.ebuild 596 RMD160 d5167ec68409b415b597673b557a5efddd246424 SHA1 5cc7e9e6092ba66a6c470c5f3c9309e64870e80d SHA256 74d88ce83a3b80e5a792a878f79d6330aee45fb669b5a48937ea289cb305d023
-MISC ChangeLog 413 RMD160 31574b9532da808fc240ef67ba3a73c852147c54 SHA1 e22d43cba7e03ab4afb7232d3b2cd99816f8a6d8 SHA256 1fe51a6cadb45e9e80a3386ad587f08899515184617895c1a222b238dd95d432
+DIST startupmanager_1.9.13.tar.gz 94671 RMD160 148e4a7aff4bdd43964727c3ec6f0e94db323655 SHA1 b82a65ac6ec488ca7fe16fd3ea277cd15a3627c6 SHA256 f51f8a64080759e3d3af58cfbae1769b8e3db8c65a2d9bd2ba80a7e6e7489a2d
+EBUILD startupmanager-1.9.13.ebuild 622 RMD160 21277c6fbfc0342225cfd2905f017753418dc69e SHA1 9a214e15d12466997c348e0bbdc77d18f71b9e1e SHA256 1291b1d54f1fc97929b35747d536a49eb47f8648d87960acfe6136e3e6681ea3
+MISC ChangeLog 540 RMD160 8e9ff05a80d0b0d6162adb08588a083c695c3f91 SHA1 868517147b029615904d2fd79c2ef3677d36242a SHA256 050b069aa50855de7c3d436e8726d3e2e156c0cca5d98a1ead9b42de21c6d5e4
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
